// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewFormRating should be rendered correctly 1`] = `
Array [
  <input
    checked={false}
    className="form__rating-input visually-hidden"
    id="1-stars"
    name="rating"
    onChange={[Function]}
    type="radio"
    value="1"
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="1-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;

exports[`ReviewFormRating should be rendered correctly when checked 1`] = `
Array [
  <input
    checked={true}
    className="form__rating-input visually-hidden"
    id="2-stars"
    name="rating"
    onChange={[Function]}
    type="radio"
    value="2"
  />,
  <label
    className="reviews__rating-label form__rating-label"
    htmlFor="2-stars"
    title="perfect"
  >
    <svg
      className="form__star-image"
      height="33"
      width="37"
    >
      <use
        xlinkHref="#icon-star"
      />
    </svg>
  </label>,
]
`;
